# gppBugAnonDestr

./: CMakeLists.txt  README.md
.github/workflows/: tests.yml
sources/: aaa.cpp  bbb.cpp  common.h  func.cpp  func.h  main.cpp
